fdo#57553: Picture dialog Macro tab page: lazily init

... because JVM startup is annoying, so delay it until really activating
Macro tab.  This patch is sort of lame but with the change in
bd2c14ec78a7549d4a19738154cdd5ea890f61c4 what can you do...

Change-Id: I01fe03abf3e4582e87927729286a21d0bac7037c